--- a/.github/workflows/test-dotnet.yaml
+++ b/.github/workflows/test-dotnet.yaml
@@ -11,4 +11,4 @@ jobs:
       - name: Install dependencies
         run: dotnet restore
       - name: Unit tests
-        run: dotnest test
+        run: dotnet test
