--- a/GitHubAction-POC.Integration.Test/GitHubAction-POC.Integration.Test.csproj
+++ b/GitHubAction-POC.Integration.Test/GitHubAction-POC.Integration.Test.csproj
@@ -21,4 +21,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\GitHubActions-POC\GitHubActions-POC.csproj" />
+    </ItemGroup>
+
 </Project>
