--- a/.github/actions/category-test-action/action.yaml
+++ b/.github/actions/category-test-action/action.yaml
@@ -18,5 +18,16 @@ runs:
           ${{ runner.os }}-nuget
     - run: dotnet restore
       shell: bash
-    - run: dotnet test --filter "Category=${{ inputs.CATEGORY }}"
+    - run: dotnet test --filter "Category=${{ inputs.CATEGORY }}" trx --result-directory "TestResults"
       shell: bash
+    - uses: actions/upload-artifact@v2
+      if: ${{ always() }}
+      with:
+        name: ${{ inputs.CATEGORY }}-test-results
+        path: TestResults
+    - uses: dorny/test-reporter@v1
+      with:
+        artifact: ${{ inputs.CATEGORY }}-test-results
+        name: ${{ inputs.CATEGORY }} Tests
+        path: TestResults
+        reporter: dotnet-trx
