add reporter to test fix typo

--- a/.github/actions/category-test-action/action.yaml
+++ b/.github/actions/category-test-action/action.yaml
@@ -18,7 +18,7 @@ runs:
           ${{ runner.os }}-nuget
     - run: dotnet restore
       shell: bash
-    - run: dotnet test --filter "Category=${{ inputs.CATEGORY }}" trx --result-directory "TestResults"
+    - run: dotnet test --filter "Category=${{ inputs.CATEGORY }}" trx --results-directory "TestResults"
       shell: bash
     - uses: actions/upload-artifact@v2
       if: ${{ always() }}
