--- a/.github/workflows/test-dotnet.yaml
+++ b/.github/workflows/test-dotnet.yaml
@@ -6,8 +6,7 @@ jobs:
   build-workflow:
     uses: morinslash/GitHubActions-DotNet-Workflows/.github/workflows/dotnet-workflow.yaml@master
   docker-workflow:
-    needs: build-workflow
     uses: morinslash/GitHubActions-DotNet-Workflows/.github/workflows/docker-build.yaml@master
     with:
       registry-url: morinslash/githubactions-poc
-      context: ./GitHubActions-POC
+      directory: GitHubActions-POC
