--- a/.github/workflows/test-dotnet.yaml
+++ b/.github/workflows/test-dotnet.yaml
@@ -3,8 +3,8 @@ name: Caller
 on: [push]
 
 jobs:
-  build-workflow:
-    uses: morinslash/GitHubActions-DotNet-Workflows/.github/workflows/dotnet-workflow.yaml@master
+#  build-workflow:
+#    uses: morinslash/GitHubActions-DotNet-Workflows/.github/workflows/dotnet-workflow.yaml@master
   docker-workflow:
     uses: morinslash/GitHubActions-DotNet-Workflows/.github/workflows/docker-build.yaml@master
     with:
