config job steps

--- a/.github/workflows/test-dotnet.yaml
+++ b/.github/workflows/test-dotnet.yaml
@@ -4,9 +4,10 @@ on: [push]
 
 jobs:
   build-workflow:
-    - uses: actions/checkout@v2
-      with:
-        repository:  Morinslash/GitHubActions-DotNet-Workflows
-        # token: ${{ secrets.GIT_TOKEN }}
-        path: .github/actions/category-test-action
-    - uses: ./.github/workflows/dotnet-workflow.yaml@master
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          repository:  Morinslash/GitHubActions-DotNet-Workflows
+          # token: ${{ secrets.GIT_TOKEN }}
+          path: .github/actions/category-test-action
+      - uses: ./.github/workflows/dotnet-workflow.yaml@master
